# CS598YP

./: .gitignore  Dockerfile  README.md  ingest_and_monitor.py  ingestion1.py  ingestion2-2.py  ingestion2.py  ingestion3.py  ingestion4.py  ingestion__plot.py  ingestion_duckdb.py  ingestion_plot.py  ingestion_sqlite.py  ingestion_test.py  ingestion_test_hot_key.py  insert_rocksdb.cpp  insert_test  monitor_ingestion.py  operator_latency_profiling.py  plot.py  plot_ingestion_comparison.py  plot_operator_latency.py  plot_rocksdb_log.py  test.duckdb  test1.py
log/: ingestion_log_1g_1threads.jsonl  ingestion_log_1g_1threads_run1.jsonl  ingestion_log_1g_2threads.jsonl  ingestion_log_1g_2threads_run1.jsonl  ingestion_log_1g_3threads_run1.jsonl  ingestion_log_1g_4threads.jsonl  ingestion_log_1g_4threads_run1.jsonl  ingestion_log_256m_1threads.jsonl  ingestion_log_256m_1threads_run1.jsonl  ingestion_log_256m_2threads.jsonl  ingestion_log_256m_2threads_run1.jsonl  ingestion_log_256m_3threads_run1.jsonl  ingestion_log_256m_4threads.jsonl  ingestion_log_256m_4threads_run1.jsonl  ingestion_log_2cpu_256mbram.jsonl  ingestion_log_2cpu_2ram.jsonl  ingestion_log_2cpu_4ram.jsonl  ingestion_log_2g_1threads_run1.jsonl  ingestion_log_2g_2threads_run1.jsonl  ingestion_log_2g_3threads_run1.jsonl  ingestion_log_2g_4threads_run1.jsonl  ingestion_log_4g_1threads.jsonl  ingestion_log_4g_1threads_run1.jsonl  ingestion_log_4g_2threads_run1.jsonl  ingestion_log_4g_3threads_run1.jsonl  ingestion_log_4g_4threads.jsonl  ingestion_log_4g_4threads_run1.jsonl  ingestion_log_512m_1threads.jsonl  ingestion_log_512m_1threads_run1.jsonl  ingestion_log_512m_2threads.jsonl  ingestion_log_512m_2threads_run1.jsonl  ingestion_log_512m_3threads_run1.jsonl  ingestion_log_512m_4threads.jsonl  ingestion_log_512m_4threads_run1.jsonl  ingestion_log_sqlite.jsonl  rocksdb_ingestion_log_cpp.jsonl
log1/: ingestion_log_256m_1threads_run1.jsonl  ingestion_log_256m_2threads_run1.jsonl  ingestion_log_256m_3threads_run1.jsonl  ingestion_log_256m_4threads_run1.jsonl  ingestion_log_4g_1threads_run1.jsonl  ingestion_log_4g_2threads.jsonl  (+2 more)
scripts/: mixed_test.sh
src/rocksdb/: CMakeLists.txt  get_version.cpp  ingestion_test_streamwrite.cpp  insert_all.cpp  query_test.cpp
(+18 files in other folders)
